--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/ik33-modified.png" alt="Mitchell Tromp Profile Picture" ></td>
+        <td><img src="https://github.com/BlackGold89/cv/blob/main/ik33-modified.png?raw=true" alt="Mitchell Tromp Profile Picture" ></td>
         <td> 
           <h1>Mitchell Tromp</h1>
           <p><em>Founder and CEO of <strong><a href="https://www.etsy.com/nl/listing/602052034/hakuna-matata-svg-disney-svg-lion-king">My Own Life</a></strong></em></p>
